# happy_path

./: AI_USAGE.md  README.md  pyproject.toml  requirements.txt  video.md
config/: cities.yaml
dashboard/: app.py
data/: FAKE_STATION.dly  eia_backup_TEST.csv  eia_raw_Chicago.csv  eia_raw_Houston.csv  eia_raw_New_York.csv  eia_raw_Phoenix.csv  eia_raw_Seattle.csv  eia_raw_TestCity.csv  merged_2025-04-05_to_2025-07-03.csv  merged_data.csv  weather_raw_Chicago.csv  weather_raw_Houston.csv  weather_raw_New_York.csv  weather_raw_Phoenix.csv  weather_raw_Seattle.csv  weather_raw_TestCity.csv
pipeline/: data_pipeline.py  data_quality.py  fetch_energy.py  fetch_weather.py
reports/: quality_2025-04-05_to_2025-07-03.json  quality_report.json  quality_report.txt  quality_report_2025-04-05_to_2025-07-03.txt
scripts/: cleanup_duplicates.py  fetch_historical.py  manual_fetch_yesterday.py  monitor_pipeline.ps1  run_daily_pipeline.py  run_pipeline_cron.sh  run_pipeline_task.bat  run_pipeline_task.ps1  setup_automation.bat  setup_automation.ps1
tests/: test_dashboard.py  test_data_pipeline.py  test_data_quality.py  test_env.py  test_fetch_energy.py  test_fetch_weather.py  test_scripts.py  test_utils.py
